# trade-vision

./: .gitignore  CLAUDE.md  PROGRESS.md  TASKS.md  docker-compose.yml  start-backend.bat  start-frontend.bat
backend/: .env.example  Dockerfile  database.py  main.py  migrate_to_postgres.py  models.py  mt5_connector.py  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt
backend/api/: __init__.py
backend/api/routes/: __init__.py  accounts.py  alerts.py  analytics.py  dashboard.py  drawdown.py  export.py  firms.py  portefeuilles.py  trades.py
backend/config/: __init__.py  accounts.py  alerts.py  ctrader_accounts.py  logging.py  settings.py
backend/db/: __init__.py  connection.py
backend/db/repositories/: __init__.py  account_stats.py  accounts_cache.py  alerts.py  balance_history.py  firm_repo.py  growth_cache.py  history.py  portefeuille_repo.py
backend/models/: __init__.py  domain.py  firm.py  responses.py
backend/scripts/: ctrader_auth.py
backend/services/: __init__.py  alert_service.py  ctrader_client.py  ctrader_service.py  mt5_bridge_client.py  mt5_mock.py  mt5_service.py  sync_service.py  websocket_service.py
backend/services/mt5/: __init__.py  account_service.py  connector.py  history_service.py  monthly_growth_service.py  risk_service.py  shared_state.py  (+2 more)
backend/tests/: conftest.py  test_account_service.py  test_accounts_route.py  test_alert_service.py  test_api.py  test_elite_system.py  test_risk_service.py  test_summary_service.py  test_sync_service_pure.py  test_trade_service.py  test_withdrawal_calculator.py
(+127 files in other folders)
