[project]
name = "trade-vision-backend"
version = "1.0.1"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top of file
    "E722",   # bare except (existing codebase)
    "F401",   # imported but unused (for __init__.py re-exports)
]

[tool.ruff.lint.isort]
known-first-party = ["api", "config", "db", "models", "services"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "__pycache__/*"]
